--- a/lab/w9-lab.html
+++ b/lab/w9-lab.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 	<div id="puzzle">
-		<img src="img/img-1.png" alt="Puzzelstukje" class='topleft'>
+		<img src="img/img-1.png" alt="Puzzelstukje" class="topleft">
 		<img src="img/img-2.png" alt="Puzzelstukje">
 		<img src="img/img-3.png" alt="Puzzelstukje">
 		<img src="img/img-4.png" alt="Puzzelstukje">
