--- a/handy/handy.html
+++ b/handy/handy.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 	<head>
@@ -9,7 +8,40 @@
 
 	<body>
 		<div>
-			<img src="logo.jpg" alt="logo">
+			<img id="logo" src="logo.jpg" alt="logo">
+			<img id="header" src="header.jpg" alt="header">
+
+			<ul>
+				<li>HOME</li>
+				<li>OVER ONS</li>
+				<li>PORTFOLIO</li>
+				<li>NIEUWS</li>
+				<li>CONTACT</li>
+			</ul>
+
+			<img src="banner-1.jpg" alt="logo">
+			<img src="banner-2.jpg" alt="logo">
+			<img src="banner-3.jpg" alt="logo">
+
+			<div id="ribbon">
+				<p id="oplossingen">Wij bouwen oplossingen</p>
+				<p id="werken">Die echt werken...</p>
+				<p id="weten">MEER WETEN?</p>
+			</div>
+
+			<img id="footer" src="footer.jpg" alt="logo">
+
+			<div class="bannerblocks" id="bannerblock1">
+				<img id="handshake" src="handshake.png" alt="handshake">
+				<p>text</p>
+			</div>
+			<div class="bannerblocks" id="bannerblock2">
+				<p>text</p>
+			</div>
+			<div class="bannerblocks" id="bannerblock3">
+				<p>text</p>
+			</div>
+
 		</div>
 	</body>
 </html>
