--- a/handy/handy.html
+++ b/handy/handy.html
@@ -13,15 +13,22 @@
 
 			<ul>
 				<li>HOME</li>
-				<li>OVER ONS</li>
-				<li>PORTFOLIO</li>
+				<li class="dropdown">OVER ONS</li>
+				<li id="portfolio">PORTFOLIO</li>
 				<li>NIEUWS</li>
 				<li>CONTACT</li>
 			</ul>
+			<img id="angle-down" src="angle-down-solid.png" alt="angle-down-solid">
 
-			<img src="banner-1.jpg" alt="logo">
-			<img src="banner-2.jpg" alt="logo">
-			<img src="banner-3.jpg" alt="logo">
+			<div class="banner1"><img src="banner-1.jpg" alt="logo"></div>
+			<div class="banner2"><img src="banner-2.jpg" alt="logo"></div>
+			<div class="banner3"><img src="banner-3.jpg" alt="logo"></div>
+
+			<div>
+				<h1 class="testtext1">text</h1>
+				<h1 class="testtext2">text</h1>
+				<h1 class="testtext3">text</h1>
+			</div>
 
 			<div id="ribbon">
 				<p id="oplossingen">Wij bouwen oplossingen</p>
@@ -31,17 +38,35 @@
 
 			<img id="footer" src="footer.jpg" alt="logo">
 
-			<div class="bannerblocks" id="bannerblock1">
-				<img id="handshake" src="handshake.png" alt="handshake">
-				<p>text</p>
+			<div id="leftbanner" class="bannerblocks">
+				<img id="bannerpngs" src="handshake.png" alt="handshake">
+				<h1>DEALS</h1>
+				<p>BEKIJK ONZE DEALS</p>
 			</div>
-			<div class="bannerblocks" id="bannerblock2">
-				<p>text</p>
+			<div id="middlebanner" class="bannerblocks">
+				<img id="bannerpngs" src="toolbox-solid.png" alt="handshake">
+				<h1>DIENSTEN</h1>
+				<p>BEKIJK ONZE DIENSTEN</p>
 			</div>
-			<div class="bannerblocks" id="bannerblock3">
-				<p>text</p>
+			<div id="rightbanner" class="bannerblocks">
+				<img id="bannerpngs" src="envelope-regular.png" alt="handshake">
+				<h1>CONTACT</h1>
+				<P>STUUR EEN BERICHT</P>
 			</div>
 
+			<div class="ftext">
+				<h1>OVER ONS</h1>
+				<p>OLorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo laboriosam 
+				odit, delectus error quas earum, sint ratione cumque perspiciatis cum volupta
+				tum at minus. Deleniti quasi suscipit neque quas consequatur sed. Ex impedit 
+				error iure sint architecto accusamus vel delectus quidem reprehenderit soluta 
+				quos possimus sed quod, nam, sit ratione excepturi! Consectetur, illum! Lorem 
+				ipsum dolor sit amet, consectetur adipisicing elit. Explicabo laboriosam 
+				odit, delectus error quas earum, sint ratione cumque perspiciatis cum volupta
+				tum at minus. Deleniti quasi suscipit neque quas consequatur sed. Ex impedit 
+				error iure sint architecto accusamus vel delectus quidem reprehenderit soluta 
+				quos possimus sed quod, nam, sit ratione excepturi! Consectetur, illum!</p>
+			</div>
 		</div>
 	</body>
 </html>
